--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ img.aligncenter {
 #wrapper {
 	overflow: hidden;
 	margin: 0px auto;
-	background: url(images/wrapper-image-bg.jpg) no-repeat center bottom;
+	background: url(images/wrapper-image-bg.png) no-repeat center bottom;
 }
 
 /* Header */
