--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #81dafc;
+  color: #8398f8;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #81dafc;
+  color: #7cb7fa;
   outline: none;
   text-decoration: none;
 }
@@ -71,17 +71,20 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #81dafc;
+  background: #8398f8;
+;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #81dafc;
+  background: #8398f8;
+  ;
 }
 
 ::selection {
   color: #fff;
-  background: #81dafc;
+  background: #8398f8;
+  ;
 }
 
 #fh5co-header,
@@ -125,7 +128,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-cover .display-tc h1 {
   font-family: "Kaushan Script", cursive;
   margin-bottom: 30px;
-  font-size: 50px;
+  font-size: 60px;
   line-height: 1.3;
   font-weight: 300;
   -webkit-transform: rotate(-5deg);
@@ -164,7 +167,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
   .fh5co-cover .display-tc h1 {
-    font-size: 34px;
+    font-size: 36px;
   }
   #fh5co-header .display-tc h1 span:before,
   .fh5co-cover .display-tc h1 span:before {
@@ -183,18 +186,18 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc h2,
 .fh5co-cover .display-tc h2 {
-  font-size: 20px;
+  font-size: 28px;
   line-height: 1.5;
   margin-bottom: 30px;
 }
 #fh5co-header .display-tc h3,
 .fh5co-cover .display-tc h3 {
-  font-size: 16px;
+  font-size: 28px;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h3,
   .fh5co-cover .display-tc h3 {
-    font-size: 16px;
+    font-size: 28px;
   }
 }
 #fh5co-header .display-tc .profile-thumb,
@@ -756,7 +759,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .work .desc {
     opacity: 1;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.95);
   }
   .work .desc h3 {
     -webkit-transform: translate3d(0, 0, 0);
